--- a/views/admin/paquetes/vista.html
+++ b/views/admin/paquetes/vista.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>EVENTO/VISTA</title>
   </head>
   <body>
@@ -37,46 +39,27 @@
 
     <section class="container">
       <form>
-        <label for="paquete">Numero de Paquete: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon3">Paquete #</span>
-          </div>
-          <input type="number" class="form-control" id="paquete" value="1" readonly="true">
+        <div class="form-group">
+          <label for="name">Nombre: <span class="req">*</span></label>
+          <input type="datetime-local" class="form-control-plaintext" id="name" placeholder="nombre del paquete" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="fehca-hora-inicio">Fecha y Hora de Inicio: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-inicio" value="2018-03-20T00:00" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="fehca-hora-fin">Fecha y Hora de Fin: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-fin" value="2018-04-20T00:00" readonly="true">
-        </div>
-        <label for="costo">Costo: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="costo" value="250" readonly="true">
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="cant-personas">Cantidad de Personas: <span class="req">*</span></label>
-          <input type="number" class="form-control" id="cant-personas" value="50" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="servicios-adicionales">Servicios adicionales:</label>
-          <input type="text" class="form-control" id="servicios-adicionales" value="20 Sillas+" readonly="true">
+          <label for="description">Descripcion: <span class="req">*</span></label>
+          <input type="datetime-local" class="form-control-plaintext" id="description" placeholder="Descripcion" data-type="curriculum" readonly>
         </div>
       </form>
     </section>
     <br><br><br><br>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+        <script src="../../../js/md5.min.js" type="text/javascript"></script>
+        <script src="../../../js/validation.js" type="text/javascript"></script>
+        <script src="../../../js/views/admin/paquetes/vista.js" type="text/javascript"></script>
   </body>
 </html>
