--- a/views/admin/proveedores/editar.html
+++ b/views/admin/proveedores/editar.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>PROVEEDOR/EDITAR</title>
   </head>
   <body>
@@ -39,43 +40,43 @@
     <section class="container">
       <form>
         <div class="form-group">
+          <label for="name">Nombre: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="name" placeholder="Fernando" data-type="nombre">
+        </div>
+        <div class="form-group">
+          <label for="last_name">Apellido: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="last_name" placeholder="Mayorga" data-type="nombre">
+        </div>
+        <div class="form-group">
+          <label for="ocupation">Ocupación: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="ocupation" placeholder="Luz y Sonido" data-type="nombre">
+        </div>
+        <div class="form-group">
           <label for="email">Email: <span class="req">*</span></label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" data-type="email" required>
+          <input type="email" class="form-control" id="email" placeholder="fernando@gmail.com" data-type="correo">
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="nombre" value="Fernando" required>
+          <label for="phone">Telefono: <span class="req">*</span></label>
+          <input type="number" class="form-control" id="phone" placeholder="3398787646" data-type="numero">
         </div>
         <div class="form-group">
-          <label for="ap-paterno">Apellido Paterno: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ap-paterno" value="Mayorga" required>
+          <label for="comment">Comentario: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="comment" placeholder="36297665" data-type="curriculum">
         </div>
-        <div class="form-group">
-          <label for="ap-materno">Apellido Materno: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ap-materno" value="Rojas" required>
-        </div>
-        <div class="form-group">
-          <label for="tel-cel">Tel. Celular: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="tel-cel" value="3398787646" required>
-        </div>
-        <div class="form-group">
-          <label for="tel-fijo">Tel. Fijo: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="tel-fijo" value="36297665" required>
-        </div>
-        <div class="form-group">
-          <label for="ocupacion">Ocupación: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ocupacion" value="Luz y Sonido" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Editar</button>
+        
+        <button type="button" id="submit" class="btn btn-primary">Editar</button>
       </form>
     </section>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript -->
-    <script src="../js/validation.js" type="text/javascript"></script>
+        <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+        <script src="../../../js/md5.min.js" type="text/javascript"></script>
+        <script src="../../../js/validation.js" type="text/javascript"></script>
+        <script src="../../../js/views/admin/proveedores/editar.js" type="text/javascript"></script>
   </body>
 </html>
