--- a/views/admin/proveedores/index.html
+++ b/views/admin/proveedores/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>PROVEEDORES</title>
   </head>
   <body>
@@ -54,41 +56,30 @@
       </div>
       <br>
 
-      <table class="table table-striped">
+      <table id="tabla" class="table table-striped">
         <thead>
           <tr>
             <th scope="col"></th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido Paterno</th>
-            <th scope="col">Apellido Materno</th>
-            <th scope="col">Celular</th>
+            <th scope="col">Nombre(s)</th>
+            <th scope="col">Apellido(s)</th>
             <th scope="col">Ocupación</th>
+            <th scope="col">Correo</th>
+            <th scope="col">Telefono</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- <% for(var i = 0; i < 8; i++) { %> -->
-          <tr>
-            <td>
-              <input type="checkbox" name="selected" value="<%-i%>" data-type="proveedores">
-            </td>
-            <td>Nombre</td>
-            <td>Paterno</td>
-            <td>Materno</td>
-            <td>Celular</td>
-            <td>Luz y Sonido</td>
-          </tr>
-          <!-- <% } %> -->
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript -->
-    <script src="../js/lista.js" type="text/javascript"></script>
+        <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+        <script src="../../../js/md5.min.js" type="text/javascript"></script>
+        <script src="../../../js/validation.js" type="text/javascript"></script>
+        <script src="../../../js/views/admin/proveedores/index.js" type="text/javascript"></script>
   </body>
 </html>
