--- a/views/admin/proveedores/vista.html
+++ b/views/admin/proveedores/vista.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>PROVEEDOR/VISTA</title>
   </head>
   <body>
@@ -38,40 +40,41 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" readonly="true">
+          <label for="name">Nombre: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="name" placeholder="Fernando" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre:</label>
-          <input type="text" class="form-control" id="nombre" value="Fernando" readonly="true">
+          <label for="last_name">Apellido: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="last_name" placeholder="Mayorga" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="ap-paterno">Apellido Paterno:</label>
-          <input type="text" class="form-control" id="ap-paterno" value="Mayorga" readonly="true">
+          <label for="ocupation">Ocupación: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="ocupation" placeholder="Luz y Sonido" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="ap-materno">Apellido Materno:</label>
-          <input type="text" class="form-control" id="ap-materno" value="Rojas" readonly="true">
+          <label for="email">Email: <span class="req">*</span></label>
+          <input type="email" class="form-control-plaintext" id="email" placeholder="fernando@gmail.com" data-type="correo" readonly>
         </div>
         <div class="form-group">
-          <label for="tel-cel">Tel. Celular:</label>
-          <input type="text" class="form-control" id="tel-cel" value="3398787646" readonly="true">
+          <label for="phone">Telefono: <span class="req">*</span></label>
+          <input type="number" class="form-control-plaintext" id="phone" placeholder="3398787646" data-type="numero" readonly>
         </div>
         <div class="form-group">
-          <label for="tel-fijo">Tel. Fijo:</label>
-          <input type="text" class="form-control" id="tel-fijo" value="36297665" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="ocupacion">Ocupación: <span class="req">*</span></label>
-          <input type="text" class="form-control" id="ocupacion" value="Luz y Sonido" readonly="true">
+          <label for="comment">Comentario: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="comment" placeholder="36297665" data-type="curriculum" readonly>
         </div>
       </form>
     </section>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+        <script src="../../../js/md5.min.js" type="text/javascript"></script>
+        <script src="../../../js/validation.js" type="text/javascript"></script>
+        <script src="../../../js/views/admin/proveedores/vista.js" type="text/javascript"></script>
   </body>
 </html>
