--- a/views/admin/evento/crear.html
+++ b/views/admin/evento/crear.html
@@ -47,6 +47,10 @@
           <label for="dateStart">Fecha Inicio: <span class="req">*</span></label>
           <input type="date" class="form-control" id="dateStart" data-type="fecha">
         </div>
+        <!-- <div class="form-group">
+          <label for="dateTimeStart">Hora Inicio: <span class="req">*</span></label>
+          <input type="time" class="form-control" id="dateTimeStart" data-type="fecha">
+        </div> -->
         <div class="form-group">
           <label for="dateEnd">Fecha Fin: <span class="req">*</span></label>
           <input type="date" class="form-control" id="dateEnd" data-type="fecha">
